fix: Corrections sauts de div

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="bottom">
             <div></div>
             <div>
-                <p><br>Soyez les bienvenues sur ce site ! Je
+                <p>Soyez les bienvenues sur ce site ! Je
                     poste ici mes compétences, mes certifications ainsi que mes différents projets de développement en
                     informatique. Cette page est en somme une sorte de blog personnel dédié à ma passion pour le
                     code.<br><br>Si mon profil et mes compétences vous intéressent, n'hésitez pas à me contacter via le bouton
@@ -58,7 +58,7 @@
     </section>
     <section id="moreaboutme">
         <div class="unit" id="formation">
-            <p class="title">Mes formations</p>
+            <p class="title">Formations</p>
             <ul>
                 <li>
                     <p>Licence informatique (2e année)</p>
@@ -74,7 +74,7 @@
             </ul>
         </div>
         <div class="unit" id="certif">
-            <p class="title">Mes certifications</p>
+            <p class="title">Certifications</p>
             <ul>
                 <li>
                     <p>Microsoft Learn C#</p>
@@ -123,7 +123,7 @@
             </ul>
         </div>
         <div class="unit" id="services">
-            <p class="title">Les plateformes que j'ai abordés</p>
+            <p class="title">Plateformes utilisées</p>
             <ul>
                 <li>
                     <p>Nginx</p>
@@ -147,7 +147,7 @@
         </div>
 
         <div class="unit" id="softwareandos">
-            <p class="title">Les logiciel et OS que j'ai utilisés</p>
+            <p class="title">Logiciels et OS préférés</p>
             <ul>
                 <li>
                     <p>Visual Studio Code</p>
