analytic: Ajout de simple Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -178,6 +178,7 @@
             <img src="./assets/Vrock691/My Post-1 (lightbrown).png" alt="Vrock691.web.app" style="height: 40px;">
             <p>|</p>
             <p>Bas de page</p>
+            <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
         </div>
         <div style="display: flex; gap: 20px;">
             <p style="color: #1A120B;" class="mobilenone">Navigation</p>
@@ -187,6 +188,8 @@
             <a href="mailto:valentin.mary@proton.me">Contact</a>
         </div>
     </nav>
+
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 
 </html>
